# yifei-platform

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml
.github/pull_request_template/: default.md
.github/workflows/: ci.yml
docs/: 121-Yifei-Shared-Platform-and-Application-Boundary.md  122-Yifei-Shared-Platform-Extraction-Inventory.md  CODE_QUALITY_STANDARD.md
docs/contracts/: A1_CALENDAR_MARKET_DATA_V1.md  A2_QUALITY_READINESS_V1.md  A3_ARTIFACT_OUTCOME_V1.md  A3_OUTCOME_PRICE_LINEAGE_V2.md  A4_OUTCOME_BATCH_V1.md  B1_ELIGIBILITY_BOARD_CAPITAL_V1.md  C1_TRANSITIONAL_DAILY_PUBLISHER_V1.md
docs/reviews/: BATCH_A_CONSUMER_COMPATIBILITY_REVIEW.md  PLATFORM_V0.1.0_RELEASE_READINESS.md  PLATFORM_V0.3.0_RELEASE_READINESS.md  PLATFORM_V0.4.0_RELEASE_READINESS.md  PLATFORM_V0.5.0_RELEASE_READINESS.md  PLATFORM_V0.6.0_RELEASE_READINESS.md
scripts/: quality_gate.sh  release_gate.sh  run_transitional_daily.sh
src/yifei_platform/: __init__.py  artifacts.py  board_capital.py  bootstrap.py  bootstrap_cli.py  calendar.py  eligibility.py  market_data.py  outcomes.py  quality.py  readiness.py  transitional_cli.py
tests/: test_artifact_contract.py  test_board_capital_reader_contract.py  test_bootstrap_market_data.py  test_calendar_contract.py  test_eligibility_contract.py  test_market_data_reader_contract.py  test_outcome_calculator_contract.py  test_quality_readiness_contract.py  test_repository_boundary.py
tests/fixtures/: market_contract_v1.json
